--- a/HW2_625-1.qmd
+++ b/HW2_625-1.qmd
@@ -26,9 +26,10 @@ $$\begin{aligned}
 &= \frac{47,233,000}{570}
 \end{aligned}
 \bar{Y} = 82864.91
-$$ 
+$$
 
 The R code for this:
+
 ```{r}
 # Defining the data
 strata <- c(1, 2, 3, 4, 5)
@@ -208,16 +209,13 @@ $$S^2 = \sum_h \frac{N_h-1}{N-1}S_h^2+\sum_h \frac{N_h-1}{N-1}(\bar{Y}_h-\bar{Y}
 
 Step-by-step calculation:
 
-For Within-stratum component: 
-$$\begin{aligned}
+For Within-stratum component: $$\begin{aligned}
 \sum_h \frac{N_h-1}{569}S_h^2 &= \frac{19}{569}(81,200)^2 + \frac{89}{569}(101,700)^2 + \frac{119}{569}(130,900)^2 + \\
 &\quad \frac{139}{569}(170,100)^2 + \frac{199}{569}(216,400)^2
 \end{aligned}
 $$
 
-
-For Between-stratum component: 
-$$
+For Between-stratum component: $$
 \begin{aligned}
 \sum_h \frac{N_h-1}{569}(\bar{Y}_h-82,864.91)^2 &= \frac{19}{569}(46,800-82,864.91)^2 + \frac{89}{569}(61,500-82,864.91)^2 + \\
 &\quad \frac{119}{569}(76,100-82,864.91)^2 + \frac{139}{569}(89,500-82,864.91)^2 + \\
@@ -274,8 +272,6 @@ cat('SRS Variance:\t\t\t', srs_var,
     '\nDesign Effect of Proportionate Allocation:\t', deff_prop,
     '\nDesign Effect of Neyman Allocation:\t', deff_neyman)
 ```
-
-
 
 Ok so the design effects for both allocations are substantially less than 1, indicating that both stratified designs are much more efficient than simple random sampling. The proportionate allocation has a design effect of about 0.082, while the Neyman allocation's design effect is about 0.075.
 
